...
        
        selectedItemIndex = index
        total++
        val selectedItem = options[index]
        if (selectedItem.id == currentItem?.id) {
            correctScore++
            feedback = "Correct!"

        } else {
            feedback = "Wrong!"
        }
    }
}

